# gfc

./: Cargo.toml
config/: default.yaml
resources/: docker-compose.yaml
resources/for-integration-test/for-test-a/: docker-compose.yml
resources/for-test-a/: docker-compose.yaml
src/: docker_client.rs  lib.rs  main.rs
src/config/: mod.rs
src/errors/: codes.rs  compose.rs  docker_compose.rs  git.rs  mod.rs  project.rs
src/handlers/: compose.rs  error.rs  mod.rs  project.rs
src/models/: container_client.rs  docker_compose.rs  git.rs  mod.rs  project.rs  response.rs
src/repositories/: compose_client.rs  container_client.rs  docker_client.rs  docker_compose_client.rs  git.rs  mod.rs
src/telemetry/: mod.rs
src/usecases/: compose.rs  container_watcher.rs  docker_compose.rs  mod.rs  project.rs
tests/: integration_test.rs
