[package]
name = "gfc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1.82"
axum = "0.8.3"
bollard = "0.17.1"
chrono = "0.4.41"
futures-util = "0.3.30"
glob = "0.3.2"
mockall = "0.13.1"
serde = "1.0.210"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
