[package]
name = "gfc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1.82"
axum = "0.8.3"
bollard = "0.17.1"
chrono = "0.4.41"
futures-util = "0.3.30"
glob = "0.3.2"
mockall = "0.13.1"
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = { version = "0.30.1", features = ["experimental_use_tracing_span_context"]}
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.30.0"
serde = "1.0.210"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tempfile = "3.20.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter","registry", "std", "fmt"] }
